travail pas encore terminer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="Username">Username</string>
     <string name="Homme">Homme</string>
     <string name="Femme">Femme</string>
+    <string name="Turk">Cafee Turk</string>
+    <string name="Direct">Caffee Direct</string>
 </resources>
